# Snakemake-tui-dashboard

./: README.md  pyproject.toml
scripts/: inject_benchmarks.py
src/smk_dash/: __main__.py  app.py  demo.py  models.py  slurm.py  watcher.py
