[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smk-dash"
version = "0.1.0"
description = "Live TUI dashboard for Snakemake workflows on Slurm clusters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "click>=8.1",
]

[project.scripts]
smk-dash = "smk_dash.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/smk_dash"]

[dependency-groups]
dev = [
    "textual-dev>=1.5.0",
]
